--- a/app/src/main/res/layout/fragment_booze.xml
+++ b/app/src/main/res/layout/fragment_booze.xml
@@ -21,54 +21,75 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="304dp"
+        android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="54dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginBottom="53dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
         app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="304dp"
+        android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="54dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar6"
         app:srcCompat="@color/design_default_color_background" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="80dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="-340dp"
+        android:text="0"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar6" />
+
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="304dp"
+        android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView10"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="304dp"
+        android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView11"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="304dp"
+        android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="118dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="116dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@color/design_default_color_background" />
 
     <SeekBar
@@ -83,17 +104,6 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
 
     <SeekBar
-        android:id="@+id/seekBar6"
-        android:layout_width="259dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
-
-    <SeekBar
         android:id="@+id/seekBar5"
         android:layout_width="259dp"
         android:layout_height="56dp"
@@ -105,6 +115,17 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
     <SeekBar
+        android:id="@+id/seekBar6"
+        android:layout_width="259dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="53dp"
+        android:layout_marginEnd="-259dp"
+        android:layout_marginBottom="52dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+    <SeekBar
         android:id="@+id/seekBar3"
         android:layout_width="259dp"
         android:layout_height="56dp"
@@ -113,7 +134,8 @@
         android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar6" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <SeekBar
         android:id="@+id/seekBar4"
@@ -144,82 +166,48 @@
         app:layout_constraintVertical_bias="1.0"
         tools:text="Lav min drink" />
 
-    <EditText
-        android:id="@+id/drink2Tekst"
-        android:layout_width="17dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="326dp"
-        android:layout_marginTop="-100dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="5dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="80dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="-340dp"
         android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/imageView9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-    <EditText
-        android:id="@+id/drink3Tekst"
-        android:layout_width="17dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="326dp"
-        android:layout_marginTop="-100dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="6dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
-
-    <EditText
-        android:id="@+id/drink4Tekst"
-        android:layout_width="17dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="326dp"
-        android:layout_marginTop="-100dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="4dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
-
-    <EditText
-        android:id="@+id/drink5Tekst"
-        android:layout_width="17dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="-100dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="71dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
 
     <TextView
-        android:id="@+id/drink1Tekst"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="285dp"
-        android:layout_marginTop="-100dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginBottom="18dp"
-        android:text="hey girl"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        android:id="@+id/textView4"
+        android:layout_width="80dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="-340dp"
+        android:text="0"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="80dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="-340dp"
+        android:text="0"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="80dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="-45dp"
+        android:layout_marginEnd="-340dp"
+        android:text="0"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
