--- a/app/src/main/res/layout/fragment_booze.xml
+++ b/app/src/main/res/layout/fragment_booze.xml
@@ -4,210 +4,154 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#181111">
+    android:background="#181111"
+    android:foregroundTint="#FFFFFF"
+    android:outlineAmbientShadowColor="#FFFFFF"
+    android:outlineProvider="background"
+    android:outlineSpotShadowColor="#FFFFFF">
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="338dp"
-        android:layout_marginBottom="53dp"
         android:contentDescription="Yes"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
+        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="26dp" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="53dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:srcCompat="@color/design_default_color_background" />
+        app:srcCompat="@color/design_default_color_background"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="128dp" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar6"
-        app:srcCompat="@color/design_default_color_background" />
+        app:srcCompat="@color/design_default_color_background"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="237dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="80dp"
         android:layout_height="31dp"
-        android:layout_marginTop="-45dp"
-        android:layout_marginEnd="-340dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar6" />
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="139dp" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
+        app:srcCompat="@color/design_default_color_background"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="346dp" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
+        app:srcCompat="@color/design_default_color_background"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="453dp" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="116dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
+        app:srcCompat="@color/design_default_color_background"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="560dp" />
 
     <SeekBar
         android:id="@+id/seekBar2"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
-        app:layout_constraintEnd_toStartOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="463dp" />
 
     <SeekBar
         android:id="@+id/seekBar5"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="117dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="565dp" />
 
     <SeekBar
         android:id="@+id/seekBar6"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <SeekBar
         android:id="@+id/seekBar3"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView9"
-        app:layout_constraintEnd_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar6"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="236dp" />
 
     <SeekBar
         android:id="@+id/seekBar4"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="-259dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toStartOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="357dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="35dp"
         android:background="#000000"
-        android:text="Button"
+        android:backgroundTint="@color/black"
+        android:backgroundTintMode="add"
+        android:outlineAmbientShadowColor="#FFFFFF"
+        android:outlineProvider="paddedBounds"
+        android:text="Lav min drink"
         app:iconTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar5"
-        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="132dp"
+        tools:layout_editor_absoluteY="648dp"
         tools:text="Lav min drink" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="80dp"
         android:layout_height="31dp"
-        android:layout_marginTop="-45dp"
-        android:layout_marginEnd="-340dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="260dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="80dp"
         android:layout_height="31dp"
-        android:layout_marginTop="-45dp"
-        android:layout_marginEnd="-340dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="357dp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="31dp"
-        android:layout_marginTop="-45dp"
-        android:layout_marginEnd="-340dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="464dp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="80dp"
         android:layout_height="31dp"
-        android:layout_marginTop="-45dp"
-        android:layout_marginEnd="-340dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="571dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
