--- a/app/src/main/res/layout/fragment_booze.xml
+++ b/app/src/main/res/layout/fragment_booze.xml
@@ -21,67 +21,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="358dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="358dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="235dp"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
-
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="31dp"
         android:layout_marginTop="138dp"
         android:layout_marginEnd="30dp"
-        android:text="0"
-        android:textColor="@color/black"
+        android:text="0 ml"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="358dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="347dp"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="358dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="449dp"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="358dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="556dp"
-        android:layout_marginEnd="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/design_default_color_background" />
 
     <SeekBar
         android:id="@+id/seekBar2"
@@ -89,12 +39,14 @@
         android:layout_height="55dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="449dp"
+        android:progressDrawable="@drawable/custom_seekbar"
+        android:thumbTint="@android:color/holo_orange_dark"
+        android:progressTint="@android:color/holo_orange_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar5"
-        android:background="#181111"
         android:layout_width="259dp"
         android:layout_height="55dp"
         android:layout_marginStart="27dp"
@@ -107,15 +59,21 @@
 
     <SeekBar
         android:id="@+id/seekBar6"
+        android:layout_width="259dp"
         android:layout_height="55dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="128dp"
+        android:progressDrawable="@drawable/custom_seekbar"
+        android:progressTint="@android:color/holo_orange_dark"
+        android:thumbTint="@android:color/holo_orange_dark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar3"
+        android:progressDrawable="@drawable/custom_seekbar"
+        android:thumbTint="@android:color/holo_orange_dark"
+        android:progressTint="@android:color/holo_orange_dark"
         android:layout_width="259dp"
         android:layout_height="56dp"
         android:layout_marginStart="26dp"
@@ -125,7 +83,9 @@
 
     <SeekBar
         android:id="@+id/seekBar4"
-
+        android:progressDrawable="@drawable/custom_seekbar"
+        android:thumbTint="@android:color/holo_orange_dark"
+        android:progressTint="@android:color/holo_orange_dark"
         android:layout_width="259dp"
         android:layout_height="55dp"
         android:layout_marginStart="26dp"
@@ -154,49 +114,48 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="31dp"
         android:layout_marginTop="246dp"
         android:layout_marginEnd="30dp"
-        android:text="0"
-        android:textColor="@color/black"
+        android:text="0 ml"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="31dp"
         android:layout_marginTop="358dp"
         android:layout_marginEnd="30dp"
-        android:text="0"
-        android:textColor="@color/black"
+        android:text="0 ml"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="31dp"
         android:layout_marginTop="458dp"
         android:layout_marginEnd="30dp"
-        android:text="0"
-        android:textColor="@color/black"
+        android:text="0 ml"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="73dp"
-        android:layout_height="37dp"
+        android:layout_width="90dp"
+        android:layout_height="31dp"
         android:layout_marginTop="566dp"
         android:layout_marginEnd="30dp"
-        android:background="#181111"
-        android:text="0"
-        android:textColor="@color/black"
+        android:text="0 ml"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
